2.13.0 - Added looping information and removed viewMatrix from the instance object.